(coq.theory
 (name Proofs)
 (modules Stack VerifyStack Quadtree VerifyQuadtree Refs VerifyRefs List_set_at_ind_old Verify_list_set_at_ind_old))


(rule
 (target Refs.v)
 (deps ../lib/refs.ml)
 (action (run cfmlc -o ./Refs.v ../lib/refs.ml))
)

(rule
 (target Stack.v)
 (deps ../lib/stack.ml)
 (action (run cfmlc -o ./Stack.v ../lib/stack.ml))
)

(rule
 (target Quadtree.v)
 (deps ../lib/quadtree.ml)
 (action (run cfmlc -o ./Quadtree.v ../lib/quadtree.ml))
)

(rule
 (target List_set_at_ind_old.v)
 (deps ../lib/list_set_at_ind_old.ml)
 (action (run cfmlc -o ./List_set_at_ind_old.v ../lib/list_set_at_ind_old.ml))
)
